<resources>
    <string name="app_name">Compass App</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_compass">Compass</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>
    <string name="title_waypoints">Waypoints</string>
    <string name="home_activity">Home Activity</string>
    <string name="compass_activity">Compass Activity</string>
    <string name="waypoints_activity">Waypoints</string>
    <string name="clear_database">Clear Database</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="add">Add</string>
    <string name="label">Label</string>
    <string name="DB_Cleared">Database has been cleared</string>
    <string name="DB_Upgraded">Database is upgraded</string>
    <string name="DB_Created">Database is created</string>

    <string name="cardinal_direction_north">North</string>
    <string name="cardinal_direction_northeast">Northeast</string>
    <string name="cardinal_direction_east">East</string>
    <string name="cardinal_direction_southeast">Southeast</string>
    <string name="cardinal_direction_south">South</string>
    <string name="cardinal_direction_southwest">Southwest</string>
    <string name="cardinal_direction_west">West</string>
    <string name="cardinal_direction_northwest">Northwest</string>
    <string name="cardinal_direction_west_abbreviation">W</string>
    <string name="zero_degrees" translatable="false">0°</string>
    <string name="degree_value" translatable="false">%.0f°</string>
    <string name="degree_celsius_value">%.0f° Celsius</string>
    <string name="humidity_value">%d Percent</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
</resources>